[project]
name = "hyperliquid"
version = "0.1.0"
description = ""
authors = [
    {name = "Yoshi",email = "yoshiyoshi@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
packages = [
    { include = "app",       from = "src" },   # â† new
    { include = "hl_core",   from = "src" },
    { include = "bots",      from = "src" }
]

dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
anyio = "^4.9.0"

[tool.poetry.group.dev.dependencies]
python = "^3.13"
pytest = "^8.4.1"
ruff = "^0.12.1"
black = "^25.1.0"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
hyperliquid-python-sdk = "^0.4.0"
