[tool.poetry]
name = "hyperliquid"
version = "0.1.0"
description = "Hyperliquid trading bot monorepo"
authors = ["Yoshi <yoshiyoshi@example.com>"]
readme = "README.md"

packages = [
  # NOTE: Do not package a local 'hyperliquid' module to avoid shadowing the official SDK.
  { include = "hl_core",           from = "src" },
  { include = "bots",              from = "src" },
  { include = "hyperliquid_stub",  from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"

anyio = "^4.9.0"
httpx = "^0.28.1"
pydantic = "^2.11.7"
rich = "^14.0.0"
loguru = "^0.7.3"
websockets = "^15.0.1"
colorama = "^0.4.6"
python-dotenv = "^1.1.1"
pyyaml = "^6.0.2"
hyperliquid-python-sdk = "^0.4.0"
setuptools = "^75.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pyright = "*"
pytest = "*"
pytest-asyncio = "*"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["build", "dist", ".venv", "node_modules"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = [".venv", "build", "dist", ".eggs"]

[tool.pytest.ini_options]
addopts = "-m 'not live' -q --maxfail=1"
markers = [
  "live: tests that hit live network/exchange; skipped in CI",
]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
